refactor: 주문 플로우와 주문 플로우 함수 분리